tests/baselines/reference/constructorNameInAccessor.errors.txt
constructorNameInAccessor.ts(2,9): error TS1341: Class constructor may not be an accessor.
constructorNameInAccessor.ts(3,9): error TS1341: Class constructor may not be an accessor.


==== constructorNameInAccessor.ts (2 errors) ====
    class C1 {
        get constructor() { return }
            ~~~~~~~~~~~
!!! error TS1341: Class constructor may not be an accessor.
        set constructor(value) {}
            ~~~~~~~~~~~
!!! error TS1341: Class constructor may not be an accessor.
    }
    